Primera revision capitulo 3 - Parte II
CAMBIOS:
* Organizado de manera correcta los apartados.
* Añadida descripcion de la arquitectura.

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -122,11 +122,11 @@ Cómo se trata una librería, nos surgía la dudad de que si los requisitos obte
 
 Pronto descubrimos que sí eran válidos, pero no eran eficientes, al estar todos mezclados era difícil saber por donde había que comenzar el diseño, por lo que optamos por organizar los requisitos de otra manera.
 
-\section{Requisitos destinados al diseño}
+\section{Requisitos destinados al diseño}\label{reqdiseño}
 
 Para que el diseño sea más conciso hemos optado por separar los requisitos en dos apartados adicionales: requisitos de la librería, que serán los requisitos de las funcionalidades que se le añaden a la pizarra y requisitos de la pizarra en sí, donde se definirá y diseñará la arquitectura propiamente dicha. 
 
-\subsubsection{Requisitos de la pizarra}
+\subsubsection{Requisitos de la pizarra}\label{reqdiseñopiz}
 Lista con todos los requisitos de pizarra.
 \begin{itemize}
 \item \textbf{Requisitos funcionales}
@@ -161,7 +161,7 @@ Lista con todos los requisitos de pizarra.
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{Requisitos de la librería}
+\subsubsection{Requisitos de la librería}\label{reqdiseñolib}
 Lista con todos los requisitos de librería.
 \begin{itemize}
 \item \textbf{Requisitos funcionales}
