Más faltas corregidas del capitulo 1

--- a/memoria/partes/a/capitulo3.tex
+++ b/memoria/partes/a/capitulo3.tex
@@ -50,11 +50,11 @@ En esta sección nos gustaría explicar brevemente cómo creemos que se instaló
 Por comenzar por algún lado, empecemos analizando el sistema operativo huésped\cite{vmwareinst}\cite{vmwareinst2}.\\
 
 \subsection{Instalación \emph{fresh} de Windows$^{\textregistered}$}
-Indagando por la web, hemos encontrado diversos \emph{post}, \emph{guías}, \emph{tutoriales} y \emph{blogs} una continúa mención a una \emph{instalación fresh $Windows^{\textregistered}$ XP}, bastante relacionado con lo que a nosotros nos incumbe, los ordenadores de la URJC.
+Indagando por la web, hemos encontrado en diversos \emph{post}, \emph{guías}, \emph{tutoriales} y \emph{blogs} una continúa mención a una \emph{instalación fresh $Windows^{\textregistered}$ XP}, bastante relacionada con lo que a nosotros nos incumbe, los ordenadores de la URJC.
 
 Esta \emph{instalación} no es otra cosa que un sistema optimizado para ser el huésped de un sistema de virtualización de segundo nivel.\\
 
-Esto es exactamente lo que encontramos en los ordenadores de la universidad, cuando arrancamos los ordenadores, en el arranque, nos da a escoger entre varias opciones y generalmente, la que escogemos para darles su uso normal es \emph{\textquotedblleft windows xp vmware worstation\textquotedblright}, donde, al escoger dicha opción, nos arranca un entorno windows minimalista (no posee ninguna aplicación externa) a excepción de la aplicación de VMWare.
+Esto es exactamente lo que encontramos en los ordenadores de la universidad; cuando arrancamos los ordenadores, en el arranque, nos da a escoger entre varias opciones y generalmente, la que escogemos para darles su uso normal es \emph{\textquotedblleft windows xp vmware worstation\textquotedblright}, donde, al escoger dicha opción, nos arranca un entorno windows minimalista (no posee ninguna aplicación externa) a excepción de la aplicación de VMWare.
 
 \subsection{Funcionamiento básico}
 
