Segunda revision capitulo 3 - Parte II
CAMBIOS:
* Restructurada la colocación de los diagramas de casos de uso.
* Restructurada la colocación de los diagramas de actividad.

--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -24,8 +24,9 @@ Para dar un poco más de detalle y ver de que manera se relacionan agente y piza
 
 \begin{figure}[H]
 \centering
-\casosdeuso\label{casodeuso1}
+\casosdeuso
 \caption{Diagrama de casos de uso de la arquitectura}
+\label{casodeuso1}
 \end{figure}
 
 Como se puede apreciar en la \emph{figura \ref{casodeuso1}} los agentes se comunican a la pizarra mediante \emph{Comprobar nivel} y \emph{Actualizar estado}, esto significa que en esas funcionalidades habrá que incluir la conexión entre ambos.\\
@@ -42,200 +43,172 @@ En primer lugar diseñaremos un diagrama de casos de uso que permite ver de una 
 Un diagrama de casos de uso permite la visualización de las actividades que se permite realizar la plataforma. A estas actividades se las denomina \textit{casos de uso}. El diagrama de casos de uso define también los actores o roles que interactúan con la aplicación y las relaciones que existen entre los distintos casos de uso. Las relaciones pueden ser de dos tipos:
 
 \begin{itemize}
-	\item \textbf{Inclusión:} Un caso de uso depende del resultado de otro.
-	\item \textbf{Extensión:} Un caso de uso se extiende en otros casos que, son esencialmente similares pero varían ligeramente su comportamiento.
+	\item \textbf{Inclusión:} Un caso de uso depende de la salida que el caso de uso con el que se relaciona produce.
+	\item \textbf{Extensión:} Un caso de uso que extiende su comportamiento a otro caso de uso, que realiza la misma función. 
 \end{itemize}
 
-En nuestro caso, nuestra aplicación consta de tres actores:
+\subsubsection{Diagrama de casos de uso de la paltaforma}
+
+En nuestro caso el diagrama se encuentra el la \emph{figura \ref{casodeusos2}}, en ella se aprecia que nuestra plataforma consta de tres actores:
+
 \begin{itemize}
-\item \textbf{Usuario}
-\item \textbf{Administrador:} es un usuario normal, pero con funcionalidad añadida; sólo existe uno en el sistema.
-\item \textbf{Pizarra:} es el actor principal de nuestra aplicación; es el responsable de interrelacionar a los usuario y al administrador.   
+\item \textbf{Usuario:} Cualquier persona con una cuenta a la que se le permita la interacción con el servidor.
+\item \textbf{Administrador:} Es un usuario normal, pero con funcionalidad añadida; sólo existe uno en el sistema.
+\item \textbf{Pizarra:} Es el actor principal de nuestra aplicación; es el responsable de interrelacionar a los usuario y al administrador.   
 \end{itemize}
 
-Los casos de uso más importantes para los usuarios son:
-\begin{itemize}
-\item \textbf{Iniciar sesión} en la pizarra
-\item \textbf{Ver estadísticas} 
-\item \textbf{Escribir (in)} en la pizarra
-\item \textbf{Leer (out)} en la pizarra
-\item \textbf{Lectura/Escritura (rd)} en la pizarra
-\item \textbf{Mostrar estado}
-\item \textbf{Buscar} en la pizarra
-\item \textbf{Comparar} archivos en la pizarra
-\item \textbf{Crear carpeta} en la pizarra
-\end{itemize}
+También se ha de apreciar que los casos de uso son muy similares a los que encontramos en la \emph{figura \ref{casodeuso1}}, correspondiente con el diseño de la arquitectura, en realidad el único cambio que se produce es el cambio entre agente y usuario.\\
 
-Los casos de uso para el Administrador son los mismos que los del usuario y además puede:
-\begin{itemize}
-\item \textbf{Crear usuario} en la pizarra
-\item \textbf{Gestionar permisos} de los usuarios
-\item \textbf{Configurar la pizarra}
-\item \textbf{Actualizar estado} de la pizarra
-\end{itemize}
-
-Por último, los casos de uso de la pizarra son:
-\begin{itemize}
-\item \textbf{Mostrar estado}
-\item \textbf{Buscar}
-\item \textbf{Comparar} archivos
-\item \textbf{Crear carpeta}
-\item \textbf{Gestionar permisos} de los usuarios
-\end{itemize} 
+Ahora, en su lugar, encontramos un actor \emph{Usuario} que solo tiene acceso a \emph{Iniciar Sesión}, y es que, en resumidas cuantas, podemos descomponer un \emph{Agente} como un usuario que inicia sesión desde un ordenador.
 
 \begin{sidewaysfigure}
 \centering
 \casos
 \caption{Diagrama de casos de uso}
+\label{casodeusos2}
 \end{sidewaysfigure}
 
+\newpage
+
 \subsection{Diagramas de actividad}
-Un diagrama de actividad es una representación de un proceso de forma gráfica. Consta de una serie de símbolos que representan los distintos pasos a seguir y flechas que indican el flujo de ejecución que se sigue.\\
+Un diagrama de actividad es una representación de un proceso de forma gráfica. Consta de una serie de símbolos que representan los distintos pasos a seguir y flechas que indican el flujo de ejecución que se sigue un caso de uso. Hemos realizado uno para cada caso de uso:\\
 
-Como es común hemos realizado un diagrama de actividad para cada uno de los casos de uso que aparecen en el diagrama anterior.
+\textbf{Actualizar Pizarra:} (\emph{Figura \ref{fig:actualizarPizarra}}) éste es uno de los estados básicos de la pizarra, ya que cada vez se escribe, se borra o se modifica algún archivo hay que hacer uso de éste.
 
-\begin{itemize}
-\item \textbf{Actualizar Pizarra:} éste es uno de los estados básicos de la pizarra, ya que cada vez se escribe o se borra algún archivo hay que hacer uso de éste.\\
-Los pasos que sigue son obtener los nuevos datos de la pizarra, conectarse con la base de datos, guardar estos cambios y notificarlo.
-
-\item \textbf{Buscar:} este caso de uso busca entre los datos de la pizarra y devuelve los datos en caso de que se hayan encontrado de acuerdo a los datos de la búsqueda.\\
-Los pasos que se siguen son iniciar sesión, en caso de que los datos sean correctos, se introducen los datos de la búsqueda, se muestran estos datos si se han producido resultados, se actualiza la pizarra y finalmente se notifica.
-
-\item \textbf{Comparar:} este caso de uso compara dos o más archivos y devuelve si se ha modificado algo y qué es lo que se ha modificado.\\
-Los pasos que se siguen son iniciar sesión, se introducen los datos para comparar, se muestran los resultados si los hay, se actualiza la pizarra y se notifica.
-
-\item \textbf{Configurar pizarra:} este caso de uso sirve para configurar la pizarra, cambiando los distintos parámetros.\\
-Los pasos que siguen son iniciar sesión, se configura la pizarra, se actualiza la pizarra y se notifica al usuario.
-
-\item \textbf{Crear carpeta:} este caso de uso permite crear nuevas carpetas a los usuarios.\\
-Los pasos que sigue son se inicia sesión, se crea la carpeta, se actualiza la pizarra y se notifica al usuario.
-
-\item \textbf{Comprobar nivel:} este caso de uso permite comprobar el nivel en el que se encuentra el usuario.\\
-Los pasos a seguir son obtener los datos del usuario, conectar con la base de datos, buscar la información del usuario y mostrar las opciones del nivel.
-
-\item \textbf{Crear usuario:} este caso de uso está restringido sólo al administrador. Crea un nuevo usuario en la pizarra.\\
-Los pasos a seguir son iniciar sesión, introducir los datos del usuario, conectar con la base de datos para comprobar que los datos introducidos son correctos, se crea el nuevo usuario, se actualiza la base de datos y se notifica. En caso de que no se pueda iniciar sesión o los datos introducidos no sean válidos, también se notifica.
-
-\item \textbf{Escribir (in):} éste es uno de las operaciones básicas de la pizarra. Escribe un nuevo dato en la pizarra.\\
-Los pasos a seguir son iniciar sesión, escribir los datos que se quieren que se escriban, actualizar la pizarra y notificárselo al usuario.
-
-\item \textbf{Lectura/Escritura (rd):} este caso de uso permite tanto leer como escribir en la pizarra.\\
-Los pasos a seguir son iniciar sesión, leer datos de la pizarra, obtener la posición donde se va a escribir, escribir los datos, actualizar los datos y notificar los cambios producidos.
-
-\item \textbf{Estadísticas:} permite ver las estadísticas de un determinado usuario.\\
-Los pasos a seguir son iniciar sesión, introducir datos de las estadísticas buscadas, conectar con la base de datos, buscar las estadísticas y se muestran los resultados, si los hay.
-
-\item \textbf{Gestionar permisos:} permite cambiar los permisos tanto de lectura como de escritura de un determinado usuario.\\
-Los pasos a seguir son iniciar sesión, introducir datos del usuario a cambiar los permisos, conectar con la base de datos, se busca el usuario, si existe, se gestionan los permisos y se actualiza la base de datos, en caso contrario, se notifica que el usuario no existe.
-
-\item  \textbf{Iniciar sesión:} se introduce el id de usuario y la contraseña para poder tener acceso.\\
-Los pasos a seguir son introducir los datos (id de usuario y contraseña), conectar con la base de datos, se comprueban si los datos son válidos, si lo son se establece la conexión, se comprueban los permisos y se notifica, y si no son válidos también se notifica.
-
-\item  \textbf{Leer (out):} leer datos de la pizarra.\\
-Los pasos a seguir son iniciar sesión, leer datos que se van a leer, actualizar la pizarra y se notifica.
-
-\item \textbf{Mostrar estado:} muestra el estado actual de la pizarra.\\
-Los pasos a seguir son iniciar sesión, se muestra el estado de la pizarra, se actualiza la pizarra y se notifica al usuario.
-\end{itemize}
-
-Todos los diagramas se muestran a continuación: 
-
-\vspace*{3cm}
-\begin{figure}[!h,scale=0.3]
+\begin{figure}[H]
 \centering
-\actualizarPizarra\label{fig:actualizarPizarra}
-\caption{Actualizar pizarra}
+\actualizarPizarra
+\caption{Diagrama de actividad de Actualizar pizarra}
+\label{fig:actualizarPizarra}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Buscar:} (\emph{Figura \ref{fig:buscar}}) este caso de uso busca entre los archivos de la pizarra y devuelve los datos de los archivos en caso de que se hayan encontrado de acuerdo a los datos de la búsqueda.
+
+\begin{figure}[H]
 \centering
-\buscar\label{fig:buscar}
-\caption{Buscar}
+\buscar
+\caption{Diagrama de actividad de Buscar}
+\label{fig:buscar}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Comparar:} (\emph{Figura \ref{fig:comparar}}) este caso de uso compara dos o más archivos y devuelve si se ha modificado algo y qué es lo que se ha modificado.
+
+\begin{figure}[H]
 \centering
-\comparar\label{fig:comparar}
-\caption{Comparar}
+\comparar
+\caption{Diagrama de actividad de Comparar}
+\label{fig:comparar}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Configurar pizarra:} (\emph{Figura \ref{fig:configurarPizarra}}) este caso de uso sirve para configurar la pizarra, cambiando los distintos parámetros.
+
+\begin{figure}[H]
 \centering
-\configurarPizarra\label{fig:configurarPizarra}
-\caption{Configurar pizarra}
+\configurarPizarra
+\caption{Diagrama de actividad de Configurar pizarra}
+\label{fig:configurarPizarra}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Crear carpeta:} (\emph{Figura \ref{fig:crearCarpeta}}) este caso de uso permite crear nuevas carpetas a los usuarios.
+
+\begin{figure}[H]
 \centering
-\crearCarpeta\label{fig:crearCarpeta}
-\caption{Crear carpeta}
+\crearCarpeta
+\caption{Diagrama de actividad de Crear carpeta}
+\label{fig:crearCarpeta}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Comprobar nivel:} (\emph{Figura \ref{fig:comprobarNivel}}) este caso de uso permite comprobar el nivel en el que se encuentra el usuario.
+\begin{figure}[H]
 \centering
-\comprobarNivel\label{fig:comprobarNivel}
-\caption{Comprobar nivel}
+\comprobarNivel
+\caption{Diagrama de actividad de Comprobar nivel}
+\label{fig:comprobarNivel}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Crear usuario:} (\emph{Figura \ref{fig:crearUsuario}}) este caso de uso está restringido sólo al administrador. Crea un nuevo usuario en la pizarra.
+
+\begin{figure}[H]
 \centering
-\crearUsuario\label{fig:crearUsuario}
-\caption{Crear usuario}
+\crearUsuario
+\caption{Diagrama de actividad de Crear usuario}
+\label{fig:crearUsuario}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Escribir (in):} (\emph{Figura \ref{fig:escribir}}) éste es uno de las operaciones básicas de la pizarra. Escribe un nuevo dato en la pizarra.
+
+\begin{figure}[H]
 \centering
-\escribir\label{fig:escribir}
-\caption{Escribir}
+\escribir
+\caption{Diagrama de actividad de Escribir}
+\label{fig:escribir}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Lectura/Escritura (rd):} (\emph{Figura \ref{fig:lecturaEscritura}}) este caso de uso permite la escritura en la pizarra pero sin eliminar los datos anteriores, es decir que permite tanto leer como escribir en la pizarra.
+
+\begin{figure}[H]
 \centering
-\lecturaEscritura\label{fig:lecturaEscritura}
-\caption{Lectura/Escritura}
+\lecturaEscritura
+\caption{Diagrama de actividad de Lectura/Escritura}
+\label{fig:lecturaEscritura}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Estadísticas:} (\emph{Figura \ref{fig:estadisticas}}) permite ver las estadísticas de un determinado usuario.
+
+\begin{figure}[H]
 \centering
-\estadisticas\label{fig:estadisticas}
-\caption{Estadísticas}
+\estadisticas
+\caption{Diagrama de actividad de Estadísticas}
+\label{fig:estadisticas}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Gestionar permisos:} (\emph{Figura \ref{fig:gestionarPermisos}}) permite cambiar los permisos tanto de lectura como de escritura de un determinado usuario.
+
+\begin{figure}[H]
 \centering
-\gestionarPermisos\label{fig:gestionarPermisos}
-\caption{Gestionar permisos}
+\gestionarPermisos
+\caption{Diagrama de actividad de Gestionar permisos}
+\label{fig:gestionarPermisos}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Iniciar sesión:} (\emph{Figura \ref{fig:iniciarSesion}}) se introduce el id de usuario y la contraseña para poder tener acceso a la plataforma.
+
+\begin{figure}[H]
 \centering
-\iniciarSesion\label{fig:iniciarSesion}
-\caption{Iniciar sesión}
+\iniciarSesion
+\caption{Diagrama de actividad de Iniciar sesión}
+\label{fig:iniciarSesion}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Leer (out):} (\emph{Figura \ref{fig:leer}}) leer datos de la pizarra.
+
+\begin{figure}[H]
 \centering
-\leer\label{fig:leer}
-\caption{Leer}
+\leer
+\caption{Diagrama de actividad de Leer}
+\label{fig:leer}
 \end{figure}
 \newpage
 
-\begin{figure}[!h]
+\textbf{Mostrar estado:} (\emph{Figura \ref{fig:mostrarEstado}}) muestra el estado actual de la pizarra.
+
+\begin{figure}[H]
 \centering
-\mostrarEstado\label{fig:mostrarEstado}
-\caption{Mostrar estado}
+\mostrarEstado
+\caption{Diagrama de actividad de Mostrar estado}
+\label{fig:mostrarEstado}
 \end{figure}
 \newpage
 
