--- a/memoria/diagramas/diag_actividad/iniciar_sesion.tex
+++ b/memoria/diagramas/diag_actividad/iniciar_sesion.tex
@@ -1,30 +1,30 @@
 % Iniciar sesión
 \newcommand{\iniciarSesion}{
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=1.2]
 
 \umlstateinitial[name=initial]
-\begin{umlstate}[x=0, y=-3,name=datos]{Introducir datos}
+\begin{umlstate}[x=0, y=-2,name=datos]{Introducir datos}
 \end{umlstate}
 
-\begin{umlstate}[x=0, y=-6,name=bd]{Conectar con la BD}
+\begin{umlstate}[x=0, y=-4,name=bd]{Conectar con la BD}
 \end{umlstate}
 
 
-\begin{umlstate}[x=0, y=-9,name=comprobar]{Comprobar datos}
+\begin{umlstate}[x=0, y=-6,name=comprobar]{Comprobar datos}
 \end{umlstate}
 
-\umlstatedecision[y=-11, name=check] 
+\umlstatedecision[y=-7.5, name=check] 
 
-\begin{umlstate}[y=-13.5,name=sesion]{Establecer sesión}
+\begin{umlstate}[y=-10,name=sesion]{Establecer sesión}
 \end{umlstate}
 
-\begin{umlstate}[y=-16.5,name=permisos]{Comprobar permisos}
+\begin{umlstate}[y=-12,name=permisos]{Comprobar permisos}
 \end{umlstate}
 
-\begin{umlstate}[y=-19.5,name=notificar]{Notificar}
+\begin{umlstate}[y=-14,name=notificar]{Notificar}
 \end{umlstate}
 
-\umlstatefinal[y=-21.5, name=final]
+\umlstatefinal[y=-16, name=final]
 
 \umltrans{initial}{datos}
 \umltrans{datos}{bd}
