Cambio de color en los diagramas de actividad

--- a/memoria/diagramas/diag_actividad/comprobar_nivel.tex
+++ b/memoria/diagramas/diag_actividad/comprobar_nivel.tex
@@ -1,7 +1,7 @@
 % Comprobar nivel
 \newcommand{\comprobarNivel}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[x=0, y=3, name=initial]
 
 \begin{umlstate}[y=0,name=datos]{Obtener datos de usuario}
