--- a/memoria/diagramas/diag_actividad/estadisticas.tex
+++ b/memoria/diagramas/diag_actividad/estadisticas.tex
@@ -1,7 +1,7 @@
 % Estadisticas
 \newcommand{\estadisticas}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 
 \begin{umlstate}[x=0, y=-3,name=sesion]{Iniciar sesión}
