--- a/memoria/diagramas/diag_actividad/iniciar_sesion.tex
+++ b/memoria/diagramas/diag_actividad/iniciar_sesion.tex
@@ -1,7 +1,7 @@
 % Iniciar sesión
 \newcommand{\iniciarSesion}{
 \begin{tikzpicture}[scale=1.2]
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-2,name=datos]{Introducir datos}
 \end{umlstate}
