--- a/memoria/diagramas/diag_actividad/actualizar_pizarra.tex
+++ b/memoria/diagramas/diag_actividad/actualizar_pizarra.tex
@@ -1,7 +1,7 @@
 % Actualizar pizarra
 \newcommand{\actualizarPizarra}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Obtener nuevos datos de la pizarra}
 \end{umlstate}
