--- a/memoria/diagramas/diag_actividad/comparar.tex
+++ b/memoria/diagramas/diag_actividad/comparar.tex
@@ -1,7 +1,7 @@
 % Comparar
 \newcommand{\comparar}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Iniciar sesión}
 \end{umlstate}
