--- a/memoria/diagramas/diag_actividad/crear_carpeta.tex
+++ b/memoria/diagramas/diag_actividad/crear_carpeta.tex
@@ -1,7 +1,7 @@
 % Crear carpeta
 \newcommand{\crearCarpeta}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Iniciar sesión}
 \end{umlstate}
