--- a/memoria/diagramas/diag_actividad/escribir.tex
+++ b/memoria/diagramas/diag_actividad/escribir.tex
@@ -1,7 +1,7 @@
 % Escribir (in)
 \newcommand{\escribir}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Iniciar sesión}
 \end{umlstate}
