--- a/memoria/diagramas/diag_actividad/leer.tex
+++ b/memoria/diagramas/diag_actividad/leer.tex
@@ -1,7 +1,7 @@
 % Leer (out)
 \newcommand{\leer}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Iniciar sesión}
 \end{umlstate}
