--- a/memoria/diagramas/diag_actividad/mostrar_estado.tex
+++ b/memoria/diagramas/diag_actividad/mostrar_estado.tex
@@ -1,7 +1,7 @@
 % Mostrar estado
 \newcommand{\mostrarEstado}{
 \begin{tikzpicture}
-
+\tikzumlset{fill state=white}
 \umlstateinitial[name=initial]
 \begin{umlstate}[x=0, y=-3,name=datos]{Iniciar sesión}
 \end{umlstate}
